improve GC tuning